[package]
name = "stephen-ngozi-blog-project"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {   version = "1.28.0", features = ["full"] }
axum = "0.8.8"
dotenvy = "0.15.7"
thiserror = "2.0.18"
tracing= "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["fmt", "env-filter"]} 
uuid = { version = "1.4.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }  
serde_json = "1.0.149" 
chrono = { version = "0.4.43", features = ["serde"] }